# django-biolerplate

./: .env  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.rst  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml
cooking_core/: conftest.py
cooking_core/accounts/: admin.py  models.py  urls.py
cooking_core/accounts/api/: serializers.py  urls.py  views.py
cooking_core/accounts/migrations/: 0001_initial.py
cooking_core/accounts/tests/: test_rest_api.py
cooking_core/accounts/tests/fixtures/: __init__.py  accounts.py
cooking_core/general/: apps.py
cooking_core/general/tests/fixtures/: __init__.py  misc.py
cooking_core/helpers/: serializers.py  views.py
cooking_core/project/: urls.py
cooking_core/project/settings/: __init__.py  base.py  docker.py  envvars.py
cooking_core/project/settings/template/: settings.dev.py  settings.github.py
core/core/utils/: collections.py  misc.py  settings.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  docker.py  envvars.py
scripts/: entrypoint.sh
