[tool.poetry]
name = "core-tutorials"
version = "0.1.0"
description = ""
authors = ["nikhil <nikhil.bhardwaj@sveltetech.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.8"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
psycopg2 = "^2.9.9"
django-split-settings = "^1.3.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
